--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,8 @@
 .conteiner {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 50px;
   width: 1200px;
   padding: 20px;
