--- a/src/components/FriendsListItem/FriendsListItem.module.css
+++ b/src/components/FriendsListItem/FriendsListItem.module.css
@@ -1,7 +1,8 @@
+
 .item {
   width: 150px;
   padding: 10px;
-  background-color: #dae0e6;
+  background-color: #79b4ee;
   display: flex;
   align-items: center;
   gap: 20px;
